force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/PDRI__ReplicateIt_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Prodly Settings</label>
</CustomObject>