force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Deactivate_Deployment_Activity_Log__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deactivate_Deployment_Activity_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Deployment Activity Log</label>
    <type>Checkbox</type>
</CustomField>