force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Debug_Deployment_Email__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Debug_Deployment_Email__c</fullName>
    <description>The email address to send the tracked deployment API call to.</description>
    <inlineHelpText>The email address to send the tracked deployment API call to.</inlineHelpText>
    <label>Debug Deployment Email</label>
    <type>Email</type>
</CustomField>