force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Deployment_Activity_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Activity_Log_Level__c</fullName>
    <label>Deployment Activity Log Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>