force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Deployment_Flow__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Flow__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>A new Deployment Flow custom setting now controls whether the Deploy button in the data set editor and the deployment plans page invokes the traditional deployment center flow or the new wizard-based guided deployment flow.</inlineHelpText>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>