force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Instance_Type__c</fullName>
    <description>Point app to Development, QA and Preview instances of the Prodly AppOps service, in addition to Production. Should only be used by Prodly support.</description>
    <inlineHelpText>Point app to Development, QA and Preview instances of the Prodly AppOps service, in addition to Production. Should only be used by Prodly support.</inlineHelpText>
    <label>AppOps Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>