force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__No_Success_Record_Results__c.field-meta.xml
<CustomField>
    <fullName>PDRI__No_Success_Record_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Success Record Results</label>
    <type>Checkbox</type>
</CustomField>