force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Object_Selector_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Object_Selector_Page_Size__c</fullName>
    <defaultValue>900</defaultValue>
    <description>The number of objects to display in the Deployment Object picklist on the data set editor. For orgs with a large number of custom objects, set a lower number to improve performance.</description>
    <inlineHelpText>The number of objects to display in the Deployment Object picklist on the data set editor. For orgs with a large number of custom objects, set a lower number to improve performance.</inlineHelpText>
    <label>Object Selector Page Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>